# alpha-pentago

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  pentago  pentago.cpp  pentago.py  requirements.txt  setup.py  state.py
alpha_pentago/: cmaes.py  main.py
pentago/: game.py  grn.py  main.py  pentago.py  tests.py  vs_human.py
scripts/: cmaes.py  debug.py  game.py  rotate.py  rotate90.py
src/: Makefile  bitboard.h  board.cc  board.h  hashcat.h  main.cc  minimax.cc  pentago  pentago.cc  position.cc  position.h
src/minimax/: minimax.cc
src/neural/: cmaes.cc  cmaes.h  heuristic.cc  heuristic.h  minimax.cc  minimax.h  negamax.cc  negamax.h
src/pentago/: Makefile  bitboard.cc  bitboard.h  board.cc  board.h  minimax.cc  pentago  position.cc  position.h
src/selfplay/: debug.cc  debug.h  game.cc  game.h
src/utils/: bitops.h  exception.h  hashcat.h  lookup.h
stash/: foo.py  pentago.h  state.cpp  state.py
tests/: test_pentago.py
util_scripts/: cmaes.py  debug.py  game.py
website/: index.html  pentago.js
